other/a/add-env-vars-from-cm/pod-resources-patched.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod01
spec:
  initContainers:
  - name: pod01-01-init
    image: busybox:1.35
    envFrom:
    - configMapRef:
        name: nsenvvars
  - name: pod01-02-init
    image: busybox:1.35
    envFrom:
    - configMapRef:
        name: nsenvvars
  containers:
  - name: pod01-01
    image: busybox:1.35
    envFrom:
    - configMapRef:
        name: nsenvvars
  - name: pod01-02
    image: busybox:1.35
    envFrom:
    - configMapRef:
        name: nsenvvars
---
apiVersion: v1
kind: Pod
metadata:
  name: pod02
spec:
  initContainers:
  - name: pod02-01-init
    image: busybox:1.35
    envFrom:
    - configMapRef:
        name: nsenvvars
  - name: pod02-02-init
    image: busybox:1.35
    envFrom:
    - configMapRef:
        name: nsenvvars
  containers:
  - name: pod02-01
    image: busybox:1.35
    envFrom:
    - configMapRef:
        name: nsenvvars
  - name: pod02-02
    image: busybox:1.35
    envFrom:
    - configMapRef:
        name: nsenvvars
